objects/SPV_Items__c.object
<CustomObject>
    <customHelpPage>SPV</customHelpPage>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>SPV Items</relationshipLabel>
        <relationshipName>SPV_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interest_Period__c</fullName>
        <label>Interest Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bonds</fullName>
                </value>
                <value>
                    <fullName>CLN</fullName>
                </value>
                <value>
                    <fullName>Commercial Paper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SPV Item</label>
    <nameField>
        <label>SPV Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SPV Items</pluralLabel>
    <recordTypes>
        <fullName>Note</fullName>
        <active>true</active>
        <label>Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>Term_Loan</fullName>
        <active>true</active>
        <label>Term Loan</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Interest_Period_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>OR
(
AND( ISBLANK(TEXT(Interest_Period__c)), NOT(ISBLANK(Period__c))),
AND( NOT(ISBLANK(TEXT(Interest_Period__c))), ISBLANK( Period__c ) )
)</errorConditionFormula>
        <errorMessage>Please ensure that the Period is specified when the Interest period is selected.
and the Interest Period is specified when the Period is populated.</errorMessage>
    </validationRules>
</CustomObject>